testsuite/tests/properties/invalid_no/bad_type/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun prop(): Int = null[Int]
}
